--- a/FastFoodApp/html/menu.html
+++ b/FastFoodApp/html/menu.html
@@ -66,91 +66,71 @@
 		<div class="contenedor-platos">
 			<ul class="tipo-plato">
 				<li class="tipo-item tipo-item_activado" data-categoria="Todo">Todo</li>
-				<li class="tipo-item" data-categoria="Desayunos">Desayunos</li>
-				<li class="tipo-item" data-categoria="Almuerzos">Almuerzos</li>
-				<li class="tipo-item" data-categoria="Meriendas">Meriendas</li>
+				<li class="tipo-item" data-categoria="Entradas">Entradas o Snacks</li>
+				<li class="tipo-item" data-categoria="Platos Principales">Platos Principales</li>
+				<li class="tipo-item" data-categoria="Combos">Combos o Especialidades</li>
 				<li class="tipo-item" data-categoria="Postres">Postres</li>
+				<li class="tipo-item" data-categoria="Bebidas">Bebidas</li>
 			</ul>
 			<div class="lista-platos">
-				<div class="item" data-categoria="Desayunos" data-descripcion="Crujiente de avena con pomelo, yogur natural y semillas">
-					<img src="../images/platos/desayunos/desayuno1.png" alt="desayuno1">
-					<a href="#">Sándwich clásico</a>
+				<!-- Entradas o Snacks -->
+				<div class="item" data-categoria="Entradas" data-descripcion="Deliciosas alitas de pollo crujientes con salsa BBQ y aderezo ranch">
+					<img src="../images/platos/meriendas/merienda1.jpg" alt="alitas">
+					<a href="#">Alitas BBQ (6 piezas)</a>
+					<a href="#">$7.50</a>
+				</div>
+				<div class="item" data-categoria="Entradas" data-descripcion="Nachos caseros con queso cheddar, jalapeños, guacamole y crema agria">
+					<img src="../images/platos/meriendas/merienda2.jpg" alt="nachos">
+					<a href="#">Nachos Supreme</a>
+					<a href="#">$6.75</a>
+				</div>
+
+				<!-- Platos Principales -->
+				<div class="item" data-categoria="Platos Principales" data-descripcion="Jugosa hamburguesa de carne angus con queso cheddar, lechuga, tomate y papas fritas">
+					<img src="../images/platos/almuerzos/almuerzo1.jpg" alt="hamburguesa">
+					<a href="#">Hamburguesa Angus Premium</a>
+					<a href="#">$12.50</a>
+				</div>
+				<div class="item" data-categoria="Platos Principales" data-descripcion="Filete de pollo marinado a la parrilla con arroz pilaf y vegetales salteados">
+					<img src="../images/platos/almuerzos/almuerzo2.jpg" alt="pollo">
+					<a href="#">Pollo a la Parrilla</a>
+					<a href="#">$11.25</a>
+				</div>
+
+				<!-- Combos o Especialidades -->
+				<div class="item" data-categoria="Combos" data-descripcion="Hamburguesa doble con queso, papas fritas grandes y bebida de 500ml">
+					<img src="../images/platos/almuerzos/almuerzo3.jpg" alt="combo1">
+					<a href="#">Combo Doble Deluxe</a>
+					<a href="#">$15.90</a>
+				</div>
+				<div class="item" data-categoria="Combos" data-descripcion="Pollo crispy, papas cajún, ensalada coleslaw y bebida refrescante">
+					<img src="../images/platos/almuerzos/almuerzo4.jpg" alt="combo2">
+					<a href="#">Combo Crispy Chicken</a>
+					<a href="#">$14.50</a>
+				</div>
+
+				<!-- Postres -->
+				<div class="item" data-categoria="Postres" data-descripcion="Cremoso cheesecake de vainilla con coulis de frutos rojos">
+					<img src="../images/platos/postres/postre1.jpg" alt="cheesecake">
+					<a href="#">Cheesecake de Frutos Rojos</a>
+					<a href="#">$5.25</a>
+				</div>
+				<div class="item" data-categoria="Postres" data-descripcion="Brownie tibio con helado de vainilla y salsa de chocolate caliente">
+					<img src="../images/platos/postres/postre2.jpg" alt="brownie">
+					<a href="#">Brownie con Helado</a>
+					<a href="#">$4.75</a>
+				</div>
+
+				<!-- Bebidas -->
+				<div class="item" data-categoria="Bebidas" data-descripcion="Refrescante limonada natural con hierbas frescas y miel">
+					<img src="../images/platos/postres/postre3.jpg" alt="limonada">
+					<a href="#">Limonada de Hierbas</a>
 					<a href="#">$3.50</a>
 				</div>
-				<div class="item" data-categoria="Desayunos">
-					<img src="../images/platos/desayunos/desayuno2.jpg" alt="desayuno2">
-					<a href="#">Wrap de desayuno</a>
-					<a href="#">$4.00</a>
-				</div>
-				<div class="item" data-categoria="Desayunos">
-					<img src="../images/platos/desayunos/desayuno3.jpeg" alt="desayuno3">
-					<a href="#">Pancakes express</a>
-					<a href="#">$4.50</a>
-				</div>
-				<div class="item" data-categoria="Desayunos">
-					<img src="../images/platos/desayunos/desayuno4.jpg" alt="desayuno4">
-					<a href="#">Bol de yogurt y granola</a>
-					<a href="#">$3.75</a>
-				</div>
-				<div class="item" data-categoria="Almuerzos">
-					<img src="../images/platos/almuerzos/almuerzo1.jpg" alt="almuerzo1">
-					<a href="#">Hamburguesa doble con papas fritas</a>
-					<a href="#">$6.50</a>
-				</div>
-				<div class="item" data-categoria="Almuerzos">
-					<img src="../images/platos/almuerzos/almuerzo2.jpg" alt="almuerzo2">
-					<a href="#">Pollo crispy con arroz y ensalada de col</a>
-					<a href="#">$6.00</a>
-				</div>
-				<div class="item" data-categoria="Almuerzos">
-					<img src="../images/platos/almuerzos/almuerzo3.jpg" alt="almuerzo3">
-					<a href="#">Burrito mixto</a>
-					<a href="#">$5.75</a>
-				</div>
-				<div class="item" data-categoria="Almuerzos">
-					<img src="../images/platos/almuerzos/almuerzo4.jpg" alt="almuerzo4">
-					<a href="#">Hot dog americano</a>
-					<a href="#">$4.50</a>
-				</div>
-				<div class="item" data-categoria="Meriendas">
-					<img src="../images/platos/meriendas/merienda1.jpg" alt="merienda1">
-					<a href="#">Empanaditas mixtas</a>
-					<a href="#">$3.50</a>
-				</div>
-				<div class="item" data-categoria="Meriendas">
-					<img src="../images/platos/meriendas/merienda2.jpg" alt="merienda2">
-					<a href="#">Papas fritas con cheddar y tocino</a>
-					<a href="#">$5.50</a>
-				</div>
-				<div class="item" data-categoria="Meriendas">
-					<img src="../images/platos/meriendas/merienda3.jpg" alt="merienda3">
-					<a href="#">Mini hamburguesitas (2 sliders)</a>
-					<a href="#">$6.50</a>
-				</div>
-				<div class="item" data-categoria="Meriendas">
-					<img src="../images/platos/meriendas/merienda4.jpg" alt="merienda4">
-					<a href="#">Panini de jamón y queso</a>
-					<a href="#">$4.00</a>
-				</div>
-				<div class="item" data-categoria="Postres">
-					<img src="../images/platos/postres/postre1.jpg" alt="postre1">
-					<a href="#">Flan Vegano de vainilla y caramelo</a>
-					<a href="#">$4.45</a>
-				</div>
-				<div class="item" data-categoria="Postres">
-					<img src="../images/platos/postres/postre2.jpg" alt="postre2">
-					<a href="#">Cubitos de rompope y cajeta</a>
-					<a href="#">$3.80</a>
-				</div>
-				<div class="item" data-categoria="Postres">
-					<img src="../images/platos/postres/postre3.jpg" alt="postre3">
-					<a href="#">Crepa de queso cottage y pera</a>
-					<a href="#">$5.90</a>
-				</div>
-				<div class="item" data-categoria="Postres">
-					<img src="../images/platos/postres/postre4.jpg" alt="postre4">
-					<a href="#">Platanos con caramelo salado y granola</a>
-					<a href="#">$5.99</a>
+				<div class="item" data-categoria="Bebidas" data-descripcion="Cerveza artesanal rubia con notas cítricas y amargor equilibrado">
+					<img src="../images/platos/postres/postre4.jpg" alt="cerveza">
+					<a href="#">Cerveza Artesanal Rubia</a>
+					<a href="#">$4.25</a>
 				</div>
 			</div>
 		</div>
