--- a/FastFoodApp/html/trabajaConNosotros.html
+++ b/FastFoodApp/html/trabajaConNosotros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Restaurante" />
 	<meta name="keywords" content="El mejor restaurante del país" />
-    <title>La Parada</title>
+    <title>Bocatto Valley</title>
     <link rel="stylesheet" type="text/css" href="../styles/header-menu.css">
     <link rel="stylesheet" type="text/css" href="../styles/stylesTrabajaConNosotros.css">
     <link rel="stylesheet" type="text/css" href="../styles/login-modal.css">
@@ -122,7 +122,7 @@
         </div>
         <div class="derechos">
             <p>reCAPTCHA y Google protegen este sitio</p>
-            <p>copyright &copy;2021 La Parada. Inc</p>
+            <p>copyright &copy;2025 Bocatto Valley. Inc</p>
         </div>
     </footer>
     <script src="../js/menu.js"></script>
