--- a/FastFoodApp/index.html
+++ b/FastFoodApp/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="description" content="Restaurante" />
 	<meta name="keywords" content="El mejor restaurante del país" />
-	<title>La Parada</title>
+	<title>Bocatto Valley</title>
 	<link rel="stylesheet" type="text/css" href="styles/header-menu.css">
 	<link rel="stylesheet" type="text/css" href="styles/stylesIndex.css">
 	<link rel="stylesheet" type="text/css" href="styles/login-modal.css">
@@ -34,7 +34,7 @@
 		</nav>
 
 		<div class="header-content">
-			<h1>La Parada</h1>
+			<h1>BOCATTO VALLEY</h1>
 			<p>Experiencia Gastronómica Única</p>
 		</div>
 	</header>
@@ -79,7 +79,7 @@
 	</div>
 	<script src="js/slider.js"></script>
 	<section class="laParada">
-		<h1>Restaurante La Parada</h1>
+		<h1>Restaurante Bocatto valley</h1>
 		<div class="contenedor-laParada">
 			<img src="images/home/menu.jpg" alt="img1" class="contenedor-imagen">
 			<div class="texo-de-imagen">
@@ -105,7 +105,7 @@
 	<footer>
 		<div class="derechos">
 			<p>reCAPTCHA y Google protegen este sitio</p>
-			<p>copyright &copy;2021 La Parada. Inc</p>
+			<p>copyright &copy;2025 Bocatto Valley. Inc</p>
 		</div>
 	</footer>
 	<script src="js/menu.js"></script>
