--- a/FastFoodApp/html/contactenos.html
+++ b/FastFoodApp/html/contactenos.html
@@ -67,15 +67,15 @@
 			<form id="formContactenos" onsubmit="return validar()">
 				<div class="elemento-form">
 					<label>Nombres:</label>
-					<input type="text" name="nombres" id="nombres" class="texto textbox" />
+					<input type="text" name="nombres" id="nombres" class="texto textbox" placeholder="Ingrese su nombre"/>
 				</div>
 				<div class="elemento-form">
 					<label>Apellidos:</label>
-					<input type="text" name="apellidos" id="apellidos" class="texto textbox" />
+					<input type="text" name="apellidos" id="apellidos" class="texto textbox" placeholder="Ingrese su apellido"/>
 				</div>
 				<div class="elemento-form">
 					<label>Email:</label>
-					<input type="email" name="correo" id="correo" class="texto textbox" />
+					<input type="email" name="correo" id="correo" class="texto textbox" placeholder="Ingrese su correo"/>
 				</div>
 				<div class="elemento-form">
 					<label>Asunto</label>
@@ -87,7 +87,7 @@
 				</div>
 				<div class="elemento-form">
 					<label>Telefono:</label>
-					<input type="text" name="telefono" id="telefono" class="texto textbox textbox" />
+					<input type="text" name="telefono" id="telefono" class="texto textbox textbox" placeholder="Ingrese su teléfono"/>
 				</div>
 				<div class="elemento-form">
 					<label>Quiere conocer nuestras instalaciones?</label>
