--- a/FastFoodApp/index.html
+++ b/FastFoodApp/index.html
@@ -23,12 +23,12 @@
 			<ul class="menu_list" id="menu_list">
 				<li class="list_item"><a href="index.html" class="link">Inicio</a></li>
 				<li class="list_item"><a href="html/menu.html" class="link">Menú</a></li>
-				<li class="list_item"><a href="#" class="link">Reservaciones</a></li>
+				<li class="list_item"><a href="html/reservaciones.html" class="link">Reservaciones</a></li>
 				<li class="list_item"><a href="html/ofertas.html" class="link">Ofertas</a></li>
-				<li class="list_item"><a href="#" class="link">Ubicaciones</a></li>
+				<li class="list_item"><a href="html/ubicaciones.html" class="link">Ubicaciones</a></li>
 				<li class="list_item"><a href="html/quienesSomos.html" class="link">Quiénes Somos</a></li>
-				<li class="list_item"><a href="#" class="link">Contáctenos</a></li>
-				<li class="list_item"><a href="#" class="link">Trabaja con Nosotros</a></li>
+				<li class="list_item"><a href="html/contactenos.html" class="link">Contáctenos</a></li>
+				<li class="list_item"><a href="html/trabajaConNosotros.html" class="link">Trabaja con Nosotros</a></li>
 				<li class="list_item"><a href="#" class="login-btn" id="loginBtn">Ingresar</a></li>
 			</ul>
 		</nav>
@@ -41,23 +41,18 @@
 
 	<!-- Login Modal -->
 	<div id="loginModal" class="login-modal">
-		<div class="login-modal-content">
-			<span class="close-modal" id="closeModal">&times;</span>
-			<h2>Iniciar Sesión</h2>
-			<div class="login-option google-login">
-				<i class="fa fa-google"></i>
-				<span>Continuar con Google</span>
-			</div>
-			<div class="login-option facebook-login">
-				<i class="fa fa-facebook"></i>
-				<span>Continuar con Facebook</span>
-			</div>
-			<div class="login-option email-login">
-				<i class="fa fa-envelope"></i>
-				<span>Continuar con Correo Electrónico</span>
-			</div>
-		</div>
-	</div>
+    <div class="login-modal-content">
+        <span class="close-modal" id="closeModal">&times;</span>
+        <h2>Iniciar Sesión</h2>
+        <div class="login-option email-login">
+            <i class="fa fa-envelope"></i>
+            <span>Continuar con Correo Electrónico</span>
+        </div>
+
+        <p class="register-link">¿No tienes una cuenta? <a href="html/registroUsuario.html">Regístrate aquí</a></p>
+
+    </div>
+</div>
 
 	<br>
 
