--- a/FastFoodApp/html/quienesSomos.html
+++ b/FastFoodApp/html/quienesSomos.html
@@ -23,12 +23,12 @@
             <ul class="menu_list" id="menu_list">
                 <li class="list_item"><a href="../index.html" class="link">Inicio</a></li>
                 <li class="list_item"><a href="menu.html" class="link">Menú</a></li>
-                <li class="list_item"><a href="#" class="link">Reservaciones</a></li>
+                <li class="list_item"><a href="reservaciones.html" class="link">Reservaciones</a></li>
                 <li class="list_item"><a href="ofertas.html" class="link">Ofertas</a></li>
-                <li class="list_item"><a href="#" class="link">Ubicaciones</a></li>
+                <li class="list_item"><a href="ubicaciones.html" class="link">Ubicaciones</a></li>
                 <li class="list_item"><a href="quienesSomos.html" class="link">Quiénes Somos</a></li>
-                <li class="list_item"><a href="#" class="link">Contáctenos</a></li>
-                <li class="list_item"><a href="#" class="link">Trabaja con Nosotros</a></li>
+                <li class="list_item"><a href="contactenos.html" class="link">Contáctenos</a></li>
+                <li class="list_item"><a href="trabajaConNosotros.html" class="link">Trabaja con Nosotros</a></li>
                 <li class="list_item"><a href="#" class="login-btn" id="loginBtn">Ingresar</a></li>
             </ul>
         </nav>
