--- a/FastFoodApp/html/reservaciones.html
+++ b/FastFoodApp/html/reservaciones.html
@@ -25,10 +25,10 @@
                 <li class="list_item"><a href="menu.html" class="link">Menú</a></li>
                 <li class="list_item"><a href="reservaciones.html" class="link">Reservaciones</a></li>
                 <li class="list_item"><a href="ofertas.html" class="link">Ofertas</a></li>
-                <li class="list_item"><a href="#" class="link">Ubicaciones</a></li>
-                <li class="list_item"><a href="#" class="link">Quiénes Somos</a></li>
-                <li class="list_item"><a href="#" class="link">Contáctenos</a></li>
-                <li class="list_item"><a href="#" class="link">Trabaja con Nosotros</a></li>
+                <li class="list_item"><a href="ubicaciones.html" class="link">Ubicaciones</a></li>
+                <li class="list_item"><a href="quienesSomos.html" class="link">Quiénes Somos</a></li>
+                <li class="list_item"><a href="contactenos.html" class="link">Contáctenos</a></li>
+                <li class="list_item"><a href="trabajaConNosotros.html" class="link">Trabaja con Nosotros</a></li>
                 <li class="list_item"><a href="#" class="login-btn" id="loginBtn">Ingresar</a></li>
             </ul>
         </nav>
