--- a/FastFoodApp/index.html
+++ b/FastFoodApp/index.html
@@ -82,18 +82,16 @@
 			</div>
 
 			<div class="demo-credentials">
-				<p><strong>Credenciales de prueba:</strong></p>
-				<div class="demo-user">
-					<span><i class="fa fa-user"></i> Cliente:</span> 
-					<code>cliente@bocatto.com</code> / <code>cliente123</code>
-				</div>
-				<div class="demo-user">
-					<span><i class="fa fa-shield"></i> Admin:</span> 
-					<code>admin@bocatto.com</code> / <code>admin123</code>
-				</div>
+			<p><strong>Credenciales de prueba:</strong></p>
+			<div class="demo-user">
+				<span><i class="fa fa-user"></i> Cliente:</span> 
+				<code>cliente@bocatto.com</code> / <code>cliente123</code>
 			</div>
-
-			<p class="register-link">¿No tienes una cuenta? <a href="#" id="openRegisterModal">Regístrate aquí</a></p>
+			<div class="demo-user">
+				<span><i class="fa fa-shield"></i> Admin:</span> 
+				<code>admin@adminbocatto.com</code> / <code>adminPass123</code>
+			</div>
+		</div>			<p class="register-link">¿No tienes una cuenta? <a href="#" id="openRegisterModal">Regístrate aquí</a></p>
 		</div>
 	</div>
 
